Mobile Responsive Fix

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
         <div>
           <img src="images/undraw_counting_stars_re_smvv.svg" alt=""/>
           <h3>Revive the <span style="color: #4CE63C;">Past</span>, Embrace the  <span style="color:#4CE63C;">Future</span>.</h3>
-          <p>We embrace the timeless charm of old-fashioned values, combining them with modern technology for a unique experience. We are on a mission to revolutionize the way you share your cherished memories.</p>
+          <p class="text-center">We embrace the timeless charm of old-fashioned values, combining them with modern technology for a unique experience. We are on a mission to revolutionize the way you share your cherished memories.</p>
         </div>
         <div>
         <img src="images/undraw_romantic_getaway_re_3f45.svg" alt="nostalgic" />
         <h3>Relive the beauty of your journey together with our modern yet <span style="color: #4CE63C;">nostalgic video platform.</span></h3>
-        <p>We constantly strive to innovate and develop new ways to enhance your video sharing experience through cutting-edge technology that should enhance, not overshadow, the emotional value of your videos.</p>
+        <p class="text-center">We constantly strive to innovate and develop new ways to enhance your video sharing experience through cutting-edge technology that should enhance, not overshadow, the emotional value of your videos.</p>
         </div>
         <div>
          <img src="images/undraw_user_flow_re_bvfx.svg" alt="userflow" />
          <h3>User <span style="color:#4CE63C;">-</span> Friendly</h3>
-         <p>We prioritize simplicity and user-friendliness, ensuring that our platform is easy to use for every couple, anywhere.</p>
+         <p class="text-center">We prioritize simplicity and user-friendliness, ensuring that our platform is easy to use for every couple, anywhere.</p>
         </div>
       </div>
     </div>
